[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.1.0"
description = "A modern Python project template — batteries included, opinions enforced."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abbas Endari", email = "a.endari@gmail.com" }]
requires-python = ">=3.12"
keywords = ["template", "python", "uv", "ruff", "docker", "github-actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "pre-commit>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/a-endari/python-template"
Repository = "https://github.com/a-endari/python-template"
Issues = "https://github.com/a-endari/python-template/issues"
Changelog = "https://github.com/a-endari/python-template/blob/main/CHANGELOG.md"

[project.scripts]
python-template = "my_project.main:main"

# ---------------------------------------------------------------------------
# uv — mirrors [project.optional-dependencies.dev] for local uv sync
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "pre-commit>=4.6.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]  # allow assert in tests, skip annotations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

# ---------------------------------------------------------------------------
# Hatch build — src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]
